# simulated_assets

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
config/: assets.json
postman/: simulated_assets.postman_collection.json
src/simulated_assets/: __init__.py  app.py  config.py  errors.py  main.py  registry.py
src/simulated_assets/domain/: __init__.py  models.py
src/simulated_assets/simulators/: __init__.py  battery.py  grid_meter.py
tests/: test_api.py  test_battery_simulator.py  test_grid_meter_simulator.py
